src/test/ui/main-wrong-location.stderr
error[E0601]: main function not found
  |
  = note: the main function must be defined at the crate level but you have one or more functions named 'main' that are not defined at the crate level. Either move the definition or attach the `#[main]` attribute to override this behavior.
note: here is a function named 'main'
 --> $DIR/main-wrong-location.rs:14:5
  |
14|     fn main() { }
  |     ^^^^^^^^^^^^^

error: aborting due to previous error

